--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,12 @@ anyhow = "1.0.100"
 clap = { version = "4.5.48", features = ["derive"] }
 clap_complete = "4.5.58"
 crossterm = "0.29.0"
-handlebars = "6.3.2"
+gray_matter = "0.3.2"
 log = "0.4.28"
-toml = "0.9.7"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+serde_yaml = "0.9.34"
+simplelog = "0.12.2"
 
 [dev-dependencies]
 mockall = "0.13.1"
