--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ clap = { version = "4.5.48", features = ["derive"] }
 clap_complete = "4.5.58"
 crossterm = "0.29.0"
 gray_matter = "0.3.2"
+handlebars = "6.3.2"
 log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
