--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde_yaml = "0.9.34"
 simplelog = "0.12.2"
+toml = "0.9.8"
 
 [dev-dependencies]
 mockall = "0.13.1"
