--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap_complete = "4.5.58"
 crossterm = "0.29.0"
 gray_matter = "0.3.2"
 handlebars = "6.3.2"
+home = "0.5.11"
 log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
